--- a/CSS/2-base/_images.scss
+++ b/CSS/2-base/_images.scss
@@ -1,7 +1,8 @@
 img {
-  width: 20rem;
+  width: 16rem;
   border-radius: 10px;
 }
+
 .bs {
-  box-shadow: 0px 0px 5px 1px;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 1);
 }
