--- a/CSS/2-base/_nav.scss
+++ b/CSS/2-base/_nav.scss
@@ -4,13 +4,14 @@
   background: $cBlue linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
   position: sticky;
   top: 0;
+  bottom: 0;
   box-shadow: 0px 5px 10px 0px;
   z-index: 2;
   height: 80px;
 }
 
 #main--nav {
-  @include anchor($cWhiteD-2, $cCamel-4);
+  @include anchor();
   display: flex;
   justify-content: space-between;
   width: 90%;
@@ -33,6 +34,7 @@
   li {
     list-style: none;
     margin: 0.6em;
+
     a {
       font-size: 0.9em;
     }
@@ -40,8 +42,9 @@
 }
 
 #bottom--nav {
-  @include svg--a(1rem, 2rem, $cCamel-4, $cWhiteD-2);
-  @include ds;
+  @include svg--a(2rem, 3rem, $cCamel-4, $cWhiteD-2);
+  background: $cBlue;
+  position: relative;
   display: inline-flex;
   justify-self: flex-end;
   position: sticky;
@@ -49,28 +52,20 @@
 }
 
 #nav--icons {
-  @include svg--a(1rem, 3rem, red, red);
+  // @include svg--a(1rem, 2.5rem, $cCamel-4, $cWhiteD-2);
+  // display: flex;
+  // flex-direction: column;
+  // position: relative;
+  // top: 90px;
+  // z-index: 10;
+  // justify-content: flex-end;
 
-  // display: inline-flex;
-  // justify-self: flex-end;
-  // position: sticky;
-  // top: 0;
-  // right: 1rem;
-  // margin-top: 80px;
-  background: $cBlue;
-  box-shadow: none;
-  display: none;
-  flex-direction: column;
+  @include svg--a(1rem 2rem, 2.5rem, $cCamel-4, $cWhiteD-2);
+  @include drop--shadow;
+  position: absolute;
+  flex-flow: column;
+  display: flex;
+  justify-self: flex-end;
   position: sticky;
-  top: 90px;
-  // position: sticky;
-  // top: 0;
-  z-index: 1;
-  justify-content: flex-end;
-
-  //BOTTOM NAV OPTIONS
-  // bottom: 0px;
-  // margin-top: 100px;
-
-  // @include ds;
+  bottom: 14.5rem;
 }
