--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -84,7 +84,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 
 .egg--p {
@@ -601,17 +601,21 @@ section {
   position: sticky;
   -webkit-box-shadow: inset 0px 8px 10px 2px black;
           box-shadow: inset 0px 8px 10px 2px black;
-  padding-bottom: 40px;
-  padding-top: 40px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0))) #d0baa7;
-  background: linear-gradient(rgba(0, 0, 0, 0) rgba(0, 0, 0, 0.8)) #d0baa7;
+  padding-bottom: 50px;
+}
+
+#blogs--section .blog--flex a:hover .blog--p::after,
+#blogs--section .blog--flex a:active .blog--p::after,
+#blogs--section .blog--flex a:focus .blog--p::after {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
 }
 
 #blogs--section .blog--flex a:hover .blog--img,
 #blogs--section .blog--flex a:active .blog--img,
 #blogs--section .blog--flex a:focus .blog--img {
-  -webkit-box-shadow: 10px 10px 20px -5px black;
-          box-shadow: 10px 10px 20px -5px black;
+  -webkit-box-shadow: 10px 10px 15px -5px black;
+          box-shadow: 10px 10px 15px -5px black;
 }
 
 #blogs--section .blog--flex .blog--box {
@@ -641,6 +645,10 @@ section {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
+  -webkit-transition: -webkit-box-shadow 200ms ease-in-out;
+  transition: -webkit-box-shadow 200ms ease-in-out;
+  transition: box-shadow 200ms ease-in-out;
+  transition: box-shadow 200ms ease-in-out, -webkit-box-shadow 200ms ease-in-out;
 }
 
 #blogs--section .blog--flex .blog--box .blog--title {
@@ -682,6 +690,40 @@ section {
   padding-left: 220px;
   border-radius: 20px;
   z-index: -1;
+  -webkit-transition: padding-bottom 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
+  transition: padding-bottom 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
+  transition: padding-bottom 150ms ease-in-out, box-shadow 150ms ease-in-out;
+  transition: padding-bottom 150ms ease-in-out, box-shadow 150ms ease-in-out, -webkit-box-shadow 150ms ease-in-out;
+}
+
+#blogs--section .blog--flex .blog--box .blog--p::after {
+  content: 'Continue reading...';
+  height: 45px;
+  width: 126px;
+  position: absolute;
+  background: #c3a082 -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.1)));
+  background: #c3a082 linear-gradient(rgba(0, 0, 0, 0.1));
+  font-size: 1.2rem;
+  font-weight: normal;
+  line-height: .9em;
+  bottom: -52px;
+  right: 20px;
+  z-index: -10;
+  padding: .5em .5em .1em .1em;
+  -webkit-box-shadow: -3px 0px 20px -5px black;
+          box-shadow: -3px 0px 20px -5px black;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transition: -webkit-transform 350ms ease-out;
+  transition: -webkit-transform 350ms ease-out;
+  transition: transform 350ms ease-out;
+  transition: transform 350ms ease-out, -webkit-transform 350ms ease-out;
+  -webkit-transform-origin: top;
+          transform-origin: top;
 }
 
 #about--section {
